# dioxus_tests

./: Cargo.toml  Dioxus.toml
src/: lib.rs  shared_state.rs  shared_state_callback.rs
