[package]
name = "dioxus-tests"
version = "0.1.0"
authors = ["Lukas Turcani <lukasturcani93@gmail.com>"]
edition = "2021"
default-run = "shared-state-callback"

[[bin]]
name = "shared-state"
path = "src/bin/shared_state.rs"

[[bin]]
name = "shared-state-callback"
path = "src/bin/shared_state_callback.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
console_error_panic_hook = "0.1.7"
