[package]
name = "dioxus-tests"
version = "0.1.0"
authors = ["Lukas Turcani <lukasturcani93@gmail.com>"]
edition = "2021"
default-run = "read-only-signal"

[[bin]]
name = "shared-state"
path = "src/bin/shared_state.rs"

[[bin]]
name = "shared-state-callback"
path = "src/bin/shared_state_callback.rs"

[[bin]]
name = "big-model"
path = "src/bin/big_model.rs"

[[bin]]
name = "split-model"
path = "src/bin/split_model.rs"

[[bin]]
name = "borrowed-props"
path = "src/bin/borrowed_props.rs"

[[bin]]
name = "spawn-forever"
path = "src/bin/spawn_forever.rs"

[[bin]]
name = "use-context-provider-refresh"
path = "src/bin/use_context_provider_refresh.rs"

[[bin]]
name = "signal-equality"
path = "src/bin/signal_equality.rs"

[[bin]]
name = "read-only-signal"
path = "src/bin/read_only_signal.rs"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
tracing = "0.1"
dioxus-logger = "0.5"
console_error_panic_hook = "0.1.7"
